# hexlet-git

./: README.md
first/: pyproject.toml
first/first/scripts/: say_hello.py
