[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["ivan.tyukin <i.d.tyukin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "first.scripts.say_hello:main"
